<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="325dp"
                android:layout_height="30dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.01999998"
                tools:text="Title" />

            <TextView
                android:id="@+id/tv_item_release"
                android:layout_width="325dp"
                android:layout_height="22dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_title"
                app:layout_constraintVertical_bias="0.01999998"
                tools:text="Release" />


            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_release"
                app:layout_constraintVertical_bias="0.01999998"
                app:srcCompat="@color/colorGrey"
                tools:ignore="ContentDescription" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/tabFav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_detail" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:padding="12dp"
                android:text="@string/overview"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail"
                app:layout_constraintVertical_bias="0.01999998"  />

            <TextView
                android:id="@+id/tv_item_overview"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@color/colorGrey"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview"
                tools:text="Detail_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>