<resources>
    <string name="app_name">Marvels</string>
    <string name="search">Search</string>
    <string name="movies">Marvel</string>
    <string name="movie">Movies</string>
    <string name="tv_show">TV Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
</resources>